add manual mode to Residual

--- a/Pre/PreMainWindow.ui
+++ b/Pre/PreMainWindow.ui
@@ -9,7 +9,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1654</width>
+    <width>1920</width>
     <height>1109</height>
    </rect>
   </property>
@@ -1600,7 +1600,7 @@
        <item>
         <widget class="QTabWidget" name="Show_MainWindow">
          <property name="currentIndex">
-          <number>2</number>
+          <number>1</number>
          </property>
          <widget class="QWidget" name="Show_Model">
           <attribute name="title">
@@ -1633,7 +1633,246 @@
           <attribute name="title">
            <string>Convergence</string>
           </attribute>
-          <layout class="QVBoxLayout" name="verticalLayout_4">
+          <layout class="QHBoxLayout" name="horizontalLayout_14">
+           <item>
+            <widget class="QWidget" name="Panel_Conver" native="true">
+             <property name="maximumSize">
+              <size>
+               <width>300</width>
+               <height>16777215</height>
+              </size>
+             </property>
+             <widget class="QLabel" name="label_27">
+              <property name="geometry">
+               <rect>
+                <x>9</x>
+                <y>9</y>
+                <width>131</width>
+                <height>19</height>
+               </rect>
+              </property>
+              <property name="maximumSize">
+               <size>
+                <width>16777215</width>
+                <height>20</height>
+               </size>
+              </property>
+              <property name="font">
+               <font>
+                <pointsize>12</pointsize>
+                <weight>75</weight>
+                <italic>false</italic>
+                <bold>true</bold>
+                <underline>false</underline>
+                <strikeout>false</strikeout>
+               </font>
+              </property>
+              <property name="text">
+               <string>Graph Options</string>
+              </property>
+             </widget>
+             <widget class="QWidget" name="widget_9" native="true">
+              <property name="geometry">
+               <rect>
+                <x>9</x>
+                <y>35</y>
+                <width>204</width>
+                <height>43</height>
+               </rect>
+              </property>
+              <layout class="QHBoxLayout" name="horizontalLayout_17">
+               <property name="spacing">
+                <number>15</number>
+               </property>
+               <item>
+                <widget class="QPushButton" name="Btn_AutoScale_Res">
+                 <property name="text">
+                  <string>AutoScale</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QPushButton" name="Btn_ManualScale_Res">
+                 <property name="text">
+                  <string>ManualScale</string>
+                 </property>
+                </widget>
+               </item>
+              </layout>
+             </widget>
+             <widget class="QLabel" name="label_29">
+              <property name="geometry">
+               <rect>
+                <x>9</x>
+                <y>118</y>
+                <width>59</width>
+                <height>17</height>
+               </rect>
+              </property>
+              <property name="maximumSize">
+               <size>
+                <width>16777215</width>
+                <height>20</height>
+               </size>
+              </property>
+              <property name="text">
+               <string>Range X:</string>
+              </property>
+             </widget>
+             <widget class="QWidget" name="Widget_Res_RangeX" native="true">
+              <property name="geometry">
+               <rect>
+                <x>9</x>
+                <y>144</y>
+                <width>282</width>
+                <height>78</height>
+               </rect>
+              </property>
+              <layout class="QHBoxLayout" name="horizontalLayout_16">
+               <property name="topMargin">
+                <number>0</number>
+               </property>
+               <property name="bottomMargin">
+                <number>0</number>
+               </property>
+               <item>
+                <widget class="QLabel" name="label_25">
+                 <property name="text">
+                  <string>Min</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QLineEdit" name="Line_RangeX_Res_Min"/>
+               </item>
+               <item>
+                <widget class="QLabel" name="label_26">
+                 <property name="text">
+                  <string>Max</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QLineEdit" name="Line_RangeX_Res_Max"/>
+               </item>
+              </layout>
+             </widget>
+             <widget class="QLabel" name="label_28">
+              <property name="geometry">
+               <rect>
+                <x>9</x>
+                <y>228</y>
+                <width>56</width>
+                <height>17</height>
+               </rect>
+              </property>
+              <property name="maximumSize">
+               <size>
+                <width>16777215</width>
+                <height>20</height>
+               </size>
+              </property>
+              <property name="text">
+               <string>Range Y1:</string>
+              </property>
+             </widget>
+             <widget class="QWidget" name="Widget_Res_RangeY1" native="true">
+              <property name="geometry">
+               <rect>
+                <x>9</x>
+                <y>254</y>
+                <width>282</width>
+                <height>77</height>
+               </rect>
+              </property>
+              <layout class="QHBoxLayout" name="horizontalLayout_15">
+               <property name="topMargin">
+                <number>0</number>
+               </property>
+               <property name="bottomMargin">
+                <number>0</number>
+               </property>
+               <item>
+                <widget class="QLabel" name="label_23">
+                 <property name="text">
+                  <string>Min</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QLineEdit" name="Line_RangeY1_Res_Min"/>
+               </item>
+               <item>
+                <widget class="QLabel" name="label_24">
+                 <property name="text">
+                  <string>Max</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QLineEdit" name="Line_RangeY1_Res_Max"/>
+               </item>
+              </layout>
+             </widget>
+             <widget class="QWidget" name="Widget_Res_RangeY1_2" native="true">
+              <property name="geometry">
+               <rect>
+                <x>10</x>
+                <y>366</y>
+                <width>282</width>
+                <height>77</height>
+               </rect>
+              </property>
+              <layout class="QHBoxLayout" name="horizontalLayout_18">
+               <property name="topMargin">
+                <number>0</number>
+               </property>
+               <property name="bottomMargin">
+                <number>0</number>
+               </property>
+               <item>
+                <widget class="QLabel" name="label_31">
+                 <property name="text">
+                  <string>Min</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QLineEdit" name="Line_RangeY2_Res_Min"/>
+               </item>
+               <item>
+                <widget class="QLabel" name="label_32">
+                 <property name="text">
+                  <string>Max</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QLineEdit" name="Line_RangeY2_Res_Max"/>
+               </item>
+              </layout>
+             </widget>
+             <widget class="QLabel" name="label_33">
+              <property name="geometry">
+               <rect>
+                <x>10</x>
+                <y>340</y>
+                <width>282</width>
+                <height>20</height>
+               </rect>
+              </property>
+              <property name="maximumSize">
+               <size>
+                <width>16777215</width>
+                <height>20</height>
+               </size>
+              </property>
+              <property name="text">
+               <string>Range Y2:</string>
+              </property>
+             </widget>
+            </widget>
+           </item>
            <item>
             <widget class="QWidget" name="Plot_Convergence" native="true">
              <layout class="QVBoxLayout" name="LayoutforConverPlot"/>
@@ -1647,7 +1886,7 @@
           </attribute>
           <layout class="QHBoxLayout" name="horizontalLayout_9">
            <item>
-            <widget class="QWidget" name="panel" native="true">
+            <widget class="QWidget" name="Panel_Monitor" native="true">
              <property name="minimumSize">
               <size>
                <width>300</width>
@@ -1712,6 +1951,19 @@
                  </size>
                 </property>
                </spacer>
+              </item>
+              <item>
+               <widget class="QLabel" name="label_30">
+                <property name="maximumSize">
+                 <size>
+                  <width>16777215</width>
+                  <height>20</height>
+                 </size>
+                </property>
+                <property name="text">
+                 <string>Variable List :</string>
+                </property>
+               </widget>
               </item>
               <item>
                <widget class="QListWidget" name="List_Variable">
@@ -1996,7 +2248,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1654</width>
+     <width>1920</width>
      <height>24</height>
     </rect>
    </property>
