--- a/Pre/PreMainWindow_bak1218.ui
+++ b/Pre/PreMainWindow_bak1218.ui
@@ -1523,23 +1523,6 @@
                     </property>
                    </widget>
                   </item>
-                  <item row="2" column="2" colspan="2">
-                   <widget class="QLineEdit" name="LEdit_EndPressure_AutoRun"/>
-                  </item>
-                  <item row="4" column="1" colspan="2">
-                   <widget class="QPushButton" name="Btn_Skip_AutoRun">
-                    <property name="text">
-                     <string>Skip</string>
-                    </property>
-                   </widget>
-                  </item>
-                  <item row="4" column="3">
-                   <widget class="QPushButton" name="Btn_End_AutoRun">
-                    <property name="text">
-                     <string>End</string>
-                    </property>
-                   </widget>
-                  </item>
                   <item row="1" column="2" colspan="2">
                    <widget class="QLineEdit" name="LEdit_StartPressure_AutoRun"/>
                   </item>
@@ -1549,6 +1532,9 @@
                      <string>End Pressure:</string>
                     </property>
                    </widget>
+                  </item>
+                  <item row="2" column="2" colspan="2">
+                   <widget class="QLineEdit" name="LEdit_EndPressure_AutoRun"/>
                   </item>
                   <item row="3" column="0" colspan="2">
                    <widget class="QLabel" name="label_43">
@@ -1568,6 +1554,20 @@
                    <widget class="QPushButton" name="Btn_Start_AutoRun">
                     <property name="text">
                      <string>Start</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item row="4" column="1" colspan="2">
+                   <widget class="QPushButton" name="Btn_Skip_AutoRun">
+                    <property name="text">
+                     <string>Skip</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item row="4" column="3">
+                   <widget class="QPushButton" name="Btn_End_AutoRun">
+                    <property name="text">
+                     <string>End</string>
                     </property>
                    </widget>
                   </item>
@@ -1598,7 +1598,7 @@
        <item>
         <widget class="QTabWidget" name="Show_MainWindow">
          <property name="currentIndex">
-          <number>3</number>
+          <number>1</number>
          </property>
          <widget class="QWidget" name="Show_Model">
           <attribute name="title">
@@ -1632,21 +1632,6 @@
            <string>Convergence</string>
           </attribute>
           <layout class="QHBoxLayout" name="horizontalLayout_14">
-           <property name="spacing">
-            <number>6</number>
-           </property>
-           <property name="leftMargin">
-            <number>9</number>
-           </property>
-           <property name="topMargin">
-            <number>9</number>
-           </property>
-           <property name="rightMargin">
-            <number>9</number>
-           </property>
-           <property name="bottomMargin">
-            <number>9</number>
-           </property>
            <item>
             <widget class="QWidget" name="Panel_Conver" native="true">
              <property name="minimumSize">
@@ -1885,7 +1870,7 @@
                     </size>
                    </property>
                    <property name="text">
-                    <string>AutoRun History:</string>
+                    <string>History:</string>
                    </property>
                   </widget>
                  </item>
@@ -1995,9 +1980,6 @@
              <layout class="QVBoxLayout" name="LayoutforConverPlot">
               <property name="spacing">
                <number>0</number>
-              </property>
-              <property name="sizeConstraint">
-               <enum>QLayout::SetMaximumSize</enum>
               </property>
               <property name="leftMargin">
                <number>0</number>
@@ -2422,7 +2404,7 @@
                      </widget>
                     </item>
                     <item>
-                     <widget class="QLineEdit" name="Line_RangeY_Perf_Min"/>
+                     <widget class="QLineEdit" name="Line_RangeY_Mon_Min_2"/>
                     </item>
                     <item>
                      <widget class="QLabel" name="label_42">
@@ -2442,7 +2424,7 @@
               </item>
               <item>
                <widget class="QWidget" name="widget_7" native="true">
-                <widget class="QPushButton" name="Btn_ClearPerformData">
+                <widget class="QPushButton" name="pushButton_6">
                  <property name="geometry">
                   <rect>
                    <x>10</x>
@@ -2455,7 +2437,7 @@
                   <string>Clear Data</string>
                  </property>
                 </widget>
-                <widget class="QPushButton" name="Btn_ExportPerformPic">
+                <widget class="QPushButton" name="pushButton_7">
                  <property name="geometry">
                   <rect>
                    <x>160</x>
